...
            ),
            TextButton(
              onPressed: () {
                Navigator.of(context).pop();
                onConfirm();
              },
              child: Text('OK'),
            ),
          ],
        );
      },
    );
  }
...
      context,
      'Cadastrar Aluno',
      Column(
        mainAxisSize: MainAxisSize.min,
        children: <Widget>[
          TextFormField(
            key: const Key('NovoAlunoInput'),
            controller: nomeController,
            decoration: InputDecoration(labelText: 'Nome do aluno'),
          ),
        ],
      ),
      () {
...
