...
      appBar: EscolaAppBar(),
      body: Container(
        // color: Colors.purple,
        child: body(),
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('CadastraAlunoButton'),
        backgroundColor: Colors.orange[700],
        child: const Icon(
          Icons.add,
          color: Colors.white,
          size: 30,
        ),
...
